# BurglarPi

./: CMakeLists.txt  Makefile  burglarPi  burglarPi.c  email.txt  log.txt  log_place.txt  mail.txt  password.txt  send_email.c  test_buzzer.c
arm/arm/: main.c
arm/arm.xcodeproj/: project.pbxproj
arm/arm.xcodeproj/project.xcworkspace/xcuserdata/Vini.xcuserdatad/: UserInterfaceState.xcuserstate
arm/arm.xcodeproj/xcuserdata/Vini.xcuserdatad/xcschemes/: arm.xcscheme  xcschememanagement.plist
arm11_1516_testsuite/: testserver.rb
doc/: Checkpoint.tex  Report.tex
final/: burglar_alarm.c
programs/: gpio.s
programs/extension/: .test_buzzer.c.swo  Makefile  alarm_test  burglarPi.c  log.txt  logexample.txt  mail.txt  password.txt  send_email.c  send_limit.c  terminated.c  testPIR  testPIR.c  test_buzzer  test_buzzer.c
programs/extension/final/: burglar_alarm
src/: .cproject  .project  ARMasm.h  ARMgen.h  Makefile  OPFunctions.c  assemble.c  assemble[Conflict].c  assemble_branch.c  assembly.c  bitOper.c  bitOper.h  double_Linked_List.c  emulate  emulate.c  emulate_branch.c  emulate_dataprocessing.c  emulate_multiply.c  emulate_singledatatransfer.c  execute_helper.c  execute_helper.h  gpio.s  gpio_helper.c  gpio_helper.h  labeliser.c  temp  tokeniser.c
src/assembler/: ARMasm.h  Makefile  OPFunctions.c  assemble.c  assemble_branch.c  assemble_helper.c  double_Linked_List.c  labeliser.c  tokeniser.c
src/bitOpers/: bitOper.c  bitOper.h
src/emulator/: ARMemu.h  Makefile  emulate.c  execute_helper.c  gpio_helper.c  gpio_helper.h
